fix layout issue on mobile view

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,31 +1,50 @@
 .home-container {
+  position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .greet-container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
-  position: relative;
-  top: 20px;
+  padding-top: 60px;
   width: calc(100% - 140px);
-  gap: 20px;
+  overflow: hidden;
+
+  .title-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
   h1.text-title {
-    position: relative;
-    padding-left: 60px;
+    width: 100%;
+    margin: 0;
     color: #fff;
     font-size: 53px;
     font-family: 'Coolvetica';
     font-weight: 400;
   }
 
+  h2 {
+    width: 100%;
+    font-size: 1.5rem;
+    margin: 0;
+    filter: grayscale(50%);
+  }
+
   .flat-button {
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 20px;
     color: #ffd700;
     font-size: 13px;
@@ -57,6 +76,7 @@
 
 .card-wrapper {
   display: flex;
+  padding-top: 45px;
   width: calc(100% - 140px);
 }
 
@@ -165,21 +185,22 @@
 
 @media screen and (max-width: 768px) {
   .home-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: 100%;
-  }
-
-  .greet-container {
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    min-height: 100%;
+    padding-bottom: 30px;
+  }
+
+  .greet-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
+    min-height: 40vh;
+    padding: 0;
 
     h1.text-title {
-      height: auto;
       margin-bottom: 0;
       padding-top: 0;
       padding-left: 0;
@@ -187,15 +208,17 @@
     }
     .flat-button {
       position: static;
-      height: auto;
       margin-top: 1rem;
       margin-bottom: 1rem;
     }
   }
 
+  .card-wrapper {
+    padding: 0;
+  }
+
   .images-container {
     position: relative;
     top: 20px;
-    height: auto;
   }
 }
