--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -1,7 +1,8 @@
 .navbar {
+  position: fixed;
+  width: 100vw;
   height: 60px;
   background-color: #000;
-  position: relative;
 }
 
 .nav-container {
